osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_validates_static_types.txt
error: one value must be a literal
--> main.sml:1:24
     |
   1 | Query = (Foo > Bar) in (1 or 2)
     |                         ^ one side of the `or` must be a non-literal (non-constant) value
--> (1) main.sml:1:24
     |
   1 | Query = (Foo > Bar) in (1 or 2)
     |                         ^ this is a literal value
--> (2) main.sml:1:29
     |
   1 | Query = (Foo > Bar) in (1 or 2)
     |                              ^ this is a literal value